tests/negative/gold/setting_parameter_statics_test.gold
tests/negative/setting_parameter_statics_test.toit:6:5: error: Field-storing parameter not allowed in static functions
foo .x:
    ^~
tests/negative/setting_parameter_statics_test.toit:7:3: error: Unresolved identifier: 'unresolved'
  unresolved
  ^~~~~~~~~~
tests/negative/setting_parameter_statics_test.toit:13:14: error: Field-storing parameter not allowed in static functions
  static bar .y:
             ^~
tests/negative/setting_parameter_statics_test.toit:14:5: error: Unresolved identifier: 'unresolved'
    unresolved
    ^~~~~~~~~~
tests/negative/setting_parameter_statics_test.toit:16:14: error: Field-storing parameter not allowed in static functions
  static gee .z:
             ^~
tests/negative/setting_parameter_statics_test.toit:17:5: error: Unresolved identifier: 'unresolved'
    unresolved
    ^~~~~~~~~~
Compilation failed.
